force-app/main/default/objects/copado__OrgDiff__c/fields/copado__From_Date__c.field-meta.xml
<CustomField>
    <fullName>copado__From_Date__c</fullName>
    <inlineHelpText>If a value is entered only modification after this date (inclusive) will be added in the Diff</inlineHelpText>
    <label>From Date</label>
    <type>Date</type>
</CustomField>