force-app/main/default/objects/copado__OrgDiff__c/fields/copado__From_Org__c.field-meta.xml
<CustomField>
    <fullName>copado__From_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Source Credential for which you would like to compare the Metadata. This Credential will be the Credential from which you would like to migrate Metadata.</inlineHelpText>
    <label>Source Credential</label>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Org Differences (Source Credential)</relationshipLabel>
    <relationshipName>FromOrgDiffs</relationshipName>
    <type>Lookup</type>
</CustomField>