force-app/main/default/objects/copado__OrgDiff__c/fields/copado__To_Org__c.field-meta.xml
<CustomField>
    <fullName>copado__To_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select the Destination Credential for which you would like to compare the Metadata and would like to migrate Metadata to. The resulting grid will show a list of differences with &apos;create&apos;, &apos;update&apos; and &apos;delete&apos; which apply to this Credential.</inlineHelpText>
    <label>Destination Credential</label>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Org Differences (Destination Credential)</relationshipLabel>
    <relationshipName>ToOrgDiffs</relationshipName>
    <type>Lookup</type>
</CustomField>